# Emergency-Exploration-Robot-E-Bot

./: README.md
E_Bot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
E_Bot/log/: latest_build
E_Bot/src/ebot_control/scripts/: ebot_nav.py
E_Bot/src/ebot_description/: CMakeLists.txt
E_Bot/src/ebot_description/config/: ekf.yaml  navigation.yaml
E_Bot/src/ebot_description/launch/: debug.launch.py  display.launch.py  nav.launch.py  spawn_robot_ros2.launch.py
E_Bot/src/ebot_description/maps/: frames.gv  map.pgm
E_Bot/src/ebot_description/meshes/: end_effector_link.STL  joint1_arm_link.STL  joint2_arm_link.STL  joint3_arm_link.STL  joint5_arm_link.STL  joint6_arm_link.STL  left_front_wheel_link.STL  manipulator_cam_link.STL  right_front_wheel_link.STL
E_Bot/src/ebot_description/rviz/: slam.rviz
E_Bot/src/ebot_description/urdf/: ebot_description.csv  ebot_description.urdf.xacro
E_Bot/src/ebot_description/worlds/: fin_world_box.world
E_Bot/src/objects/: settingss.ini
Ros Code/src/ebot_control/: CMakeLists.txt  package.xml
Ros Code/src/ebot_control/scripts/: ebot_control.py  ebot_nav.py  ebot_teleop.py
Ros Code/src/ebot_control/src/: wheel_odom.cpp
Ros Code/src/ebot_description/: package.xml
Ros Code/src/ebot_description/config/: control.yaml
Ros Code/src/ebot_description/include/: display.launch.py
Ros Code/src/ebot_description/launch/: display.launch.py  test.launch.py
Ros Code/src/ebot_description/maps/: map.yaml
Ros Code/src/ebot_description/meshes/: base_link.STL  bot_cam_link.STL  joint4_arm_link.STL  (+4 more)
(+30 files in other folders)
